tests/baselines/reference/project/nestedLocalModuleWithRecursiveTypecheck/node/nestedLocalModuleWithRecursiveTypecheck.errors.txt
test1.ts(3,23): error TS1147: Import declarations in a namespace cannot reference a module.
test1.ts(3,23): error TS2792: Cannot find module 'test2'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?


==== test1.ts (2 errors) ====
    module myModule {
     
     import foo = require("test2");
                          ~~~~~~~
!!! error TS1147: Import declarations in a namespace cannot reference a module.
                          ~~~~~~~
!!! error TS2792: Cannot find module 'test2'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?
    
     //console.log(foo.$);
    
     var z = foo.Yo.y();
    
    }
    
    export var x = 0;
    